# FSDS

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  nonstandardcode.py  pyproject.toml  requirements.txt
Notebooks/: Evedently AI.ipynb  nonstandardcode.ipynb  testing.ipynb
artifacts/: lr.pkl
data/processed/drift_reference/: drift_reference.csv
data/processed/test/: strat_test.csv  test.csv
data/processed/train/: strat_train.csv  train.csv
monitoring/: drift_report.py
src/: config.py  ingest_data.py  score.py  train.py  utils.py
src/housing_price/: api.py  config.py  ingest_data.py  main.py  score.py  train.py  utils.py
src/housing_price.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_ingest_data.py  test_score.py  test_train.py
