[project]
name = "housing_price"
version = "0.1.0"
description = "Housing Price Prediction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Common dependencies for all environments
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
formatter = [
    # optional development dependencies
    "black",
    "isort",
    "flake8",
]
plot = [
    # optional visualization related dependencies
    "matplotlib",
    "seaborn",
]
test = [
    # optional testing dependencies
    "pytest"
]
