[project]
name = "housing_price"
version = "0.2.0"
description = "Housing Price Prediction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.7.0",
    # Common dependencies for all environments
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "six>=1.17.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
formatter = [
    # optional development dependencies
    "black",
    "isort",
    "flake8",
]
plot = [
    # optional visualization related dependencies
    "matplotlib",
    "seaborn",
]
test = [
    # optional testing dependencies
    "pytest"
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[flake8]
max-line-length = 88

